--- a/src/components/Experience.astro
+++ b/src/components/Experience.astro
@@ -29,13 +29,13 @@ import newPaltzIcon from '../images/icons/new-paltz-icon.png';
               href='https://polkadot.com/'
               target='_blank'
               class='text-lightBlue'>(polkadot.com)</a
-            > using Next.js, Typescript React, and Vercel. Supported design and content
-            teams with new pages, features, and components, while fixing front- and
-            back-end bugs to ensure performance. Ran a technical SEO audit with Ahrefs,
-            raising site health from 68 to 97, and used SEMrush to guide content
-            strategy — increasing organic traffic by 30%. Improved Core Web Vitals
-            from 60–70 to 95–100 by optimizing images, enabling lazy loading, and
-            reducing layout shifts — cutting load times by 50%.
+            > using Next.js, Typescript, React, and Vercel. Supported design and
+            content teams with new pages, features, and components, while fixing
+            front- and back-end bugs to ensure performance. Ran a technical SEO audit
+            with Ahrefs, raising site health from 68 to 97, and used SEMrush to guide
+            content strategy — increasing organic traffic by 30%. Improved Core Web
+            Vitals from 60–70 to 95–100 by optimizing images, enabling lazy loading,
+            and reducing layout shifts — cutting load times by 50%.
           </Position>
           <Position
             title='Website Manager / Web Developer'
