--- a/src/pages/resume.astro
+++ b/src/pages/resume.astro
@@ -106,8 +106,8 @@ import Button from '../components/Button.astro';
                     </li>
 
                     <li>
-                      Built and maintained custom WordPress and Webflow sites;
-                      created reusable templates and CMS schemas to support new
+                      Built and maintained custom WordPress and Webflow sites.
+                      Created reusable templates and CMS schemas to support new
                       page types and content structures, streamlining site
                       updates and improving scalability for growing content
                       needs.
